[package]
name = "nestedworld-cli"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]

[dependencies]
clap = { version = "2", features = ["nightly", "unstable"] }
clippy = { version = "*", optional = true }
error-chain = "0.7"
log = "0.3.5"
log4rs = { version = "0.4", features = ["toml"] }
nestedworld-server = { path = "../server" }
rustc-serialize = "0.3.18"
toml-config = "0.3.0"
