[package]
name = "nestedworld-db"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]

[dependencies]
chrono = "0.2"
clippy = { version = "*", optional = true }
log = "0.3.5"
postgres = { version = "0.11", features = ["chrono", "time", "uuid", "serde_json", "nightly"] }
postgres-derive-macros = "0.1"
quick-error = "1.0.0"
r2d2 = "0.7.0"
r2d2_postgres = "0.10.0"
serde_json = "0.7.1"
