[package]
name = "nestedworld-db"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]

[dependencies]
chrono = "0.2"
clippy = { version = "*", optional = true }
error-chain = "0.7"
log = "0.3.6"
postgis = "0.3.0"
postgres = { version = "0.13", features = ["with-chrono", "with-time", "with-uuid", "with-serde_json"] }
postgres-derive = "0.2"
r2d2 = "0.7.1"
r2d2_postgres = "0.11"
rand = "0.3"
serde_json = "0.8"
