[package]
name = "nestedworld-server"
version = "0.1.0"
authors = ["KokaKiwi <kokakiwi@kokakiwi.net>"]

[dependencies]
clippy = { version = "*", optional = true }
error-chain = "0.5"
futures = "0.1.3"
jwt = "0.4"
log = "0.3"
mioco = "0.8"
nestedworld-db = { path = "../db" }
rand = "0.3"
rmp = "0.7"
rustc-serialize = "0.3"
slab = "0.3"
uuid = { version = "0.3", features = ["use_std", "v4"] }
